# ChangeLog for sys-boot/dvhtool
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-boot/dvhtool/ChangeLog,v 1.8 2005/09/26 21:40:29 kumba Exp $

  27 Sep 2005; Joshua Kinard <kumba@gentoo.org> dvhtool-1.0.1-r1.ebuild:
  Typo fix in the patch name...

*dvhtool-1.0.1-r1 (25 Sep 2005)

  25 Sep 2005; Joshua Kinard <kumba@gentoo.org> -files/dvhtool-1.0.1-2.diff,
  +files/dvhtool-1.0.1-add-raid-lvm-parttypes.patch,
  +files/dvhtool-1.0.1-debian.diff, +dvhtool-1.0.1-r1.ebuild,
  -dvhtool-1.0.1.ebuild:
  Ebuild cleanups (use epatch), no longer provides virtual/bootloader, remove
  22K debian patch and replace with smaller version, add in patch that lets
  dvhtool recognize RAID/LVM partitions.

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> dvhtool-1.0.1.ebuild:
  virtual/glibc -> virtual/libc

  29 May 2004; Robin H. Johnson <robbat2@gentoo.org> dvhtool-1.0.1.ebuild:
  add ~x86 so I can manipulate sgi volume headers on an x86 box

  26 Apr 2004; Aron Griffis <agriffis@gentoo.org> dvhtool-1.0.1.ebuild:
  Add die following econf for bug 48950

  08 Dec 2003; Seemant Kulleen <seemant@gentoo.org> dvhtool-1.0.1.ebuild,
  metadata.xml, files/dvhtool-1.0.1-2.diff:
  moved from sys-apps to sys-boot

*dvhtool-1.0.1 (23 Jan 2003)

  10 Sep 2003; Joshua Kinard <kumba@gentoo.org> metadata.xml:
  Added metadata.xml

  23 Jan 2003; Jan Seidel <tuxus@gentoo.org> :
  Initial import.  Dvhtool contains the following patches from the
  Debian/MIPS :
      dvhtool-1.0.1-2.diff