@@ -1,6 +1,24 @@
-MD5 a9584dd2ffe94f0e3f625d2ea43b8f08 ChangeLog 1545
-MD5 0a53b353a0e5b4a52010788926eaa2c7 metadata.xml 157
-MD5 ab9d6491adcd3b3ab0bd2fed6a4bf74f dvhtool-1.0.1-r1.ebuild 948
-MD5 215d6dff1aaf61955ec8ffc3fbd3a573 files/digest-dvhtool-1.0.1-r1 69
+AUX dvhtool-1.0.1-add-raid-lvm-parttypes.patch 1067 RMD160 0b69970604469984c7261526dc36a98fa23441ca SHA1 7c01547395c81b4b2be30b63420475e833769bad SHA256 09b0358113c7a83b3c94f0f55849654e47a85a686daf53d55ed8dacecb89206a
 MD5 54e9fdf806b7cca5fe10d0e6e94e6672 files/dvhtool-1.0.1-add-raid-lvm-parttypes.patch 1067
+RMD160 0b69970604469984c7261526dc36a98fa23441ca files/dvhtool-1.0.1-add-raid-lvm-parttypes.patch 1067
+SHA256 09b0358113c7a83b3c94f0f55849654e47a85a686daf53d55ed8dacecb89206a files/dvhtool-1.0.1-add-raid-lvm-parttypes.patch 1067
+AUX dvhtool-1.0.1-debian.diff 5271 RMD160 f15462771e12c48b7bc6dbe2d679dfe6fa170028 SHA1 9f971fe66862e1fe8435075b94c20161dc34608a SHA256 081d8155ee5b155343a9c8530becd83cb41955fbb344b886b67ff4189a74dfa9
 MD5 3c1ae73aa85c61df8d8f8c989e1f6d2c files/dvhtool-1.0.1-debian.diff 5271
+RMD160 f15462771e12c48b7bc6dbe2d679dfe6fa170028 files/dvhtool-1.0.1-debian.diff 5271
+SHA256 081d8155ee5b155343a9c8530becd83cb41955fbb344b886b67ff4189a74dfa9 files/dvhtool-1.0.1-debian.diff 5271
+DIST dvhtool_1.0.1.orig.tar.gz 53283 RMD160 6e9096ac0dc81c2e1a93b7891ec25e373f3c4b40 SHA1 3d371f3e17c3d0af117f86dfc4be1736ce6ef01b SHA256 3596c74c08ee8f2f19712e8f0ab1f7ff8c483de7bfc2f50d205a186f52896f02
+EBUILD dvhtool-1.0.1-r1.ebuild 935 RMD160 dfd62a51b89af73ca3cc857a7c73408c3622245e SHA1 e4d9f9860c5a727e68f3b7c2f5f835d3243638f6 SHA256 785462d65b87b5e06e29418a1ff6714dcaabecff5648c7c7e1d0247bddee46bb
+MD5 80467a00355768389c54827cce976337 dvhtool-1.0.1-r1.ebuild 935
+RMD160 dfd62a51b89af73ca3cc857a7c73408c3622245e dvhtool-1.0.1-r1.ebuild 935
+SHA256 785462d65b87b5e06e29418a1ff6714dcaabecff5648c7c7e1d0247bddee46bb dvhtool-1.0.1-r1.ebuild 935
+MISC ChangeLog 1670 RMD160 116e50f35f90969cf8e6a7c1137e9e39264c6793 SHA1 a923da055a679140c680a1c77e4e411aa12a4b12 SHA256 1aaf4189a037ce10b07325190617fca241e84254a93743099388224a1189faf4
+MD5 55fb4b7fbb8a5b25231892a16a3ebe33 ChangeLog 1670
+RMD160 116e50f35f90969cf8e6a7c1137e9e39264c6793 ChangeLog 1670
+SHA256 1aaf4189a037ce10b07325190617fca241e84254a93743099388224a1189faf4 ChangeLog 1670
+MISC metadata.xml 157 RMD160 0ac2d8532124fa8abeb7b2cdeb4a980a63448ed0 SHA1 08e1838ad5d8737c3255d39f582261a4535757f5 SHA256 4d611693c6a98b16de7a5c6ca73f3c809f24019563a364abafb59216082bc42f
+MD5 0a53b353a0e5b4a52010788926eaa2c7 metadata.xml 157
+RMD160 0ac2d8532124fa8abeb7b2cdeb4a980a63448ed0 metadata.xml 157
+SHA256 4d611693c6a98b16de7a5c6ca73f3c809f24019563a364abafb59216082bc42f metadata.xml 157
+MD5 dca84fe0d98c0e34bbf83374a3d650fa files/digest-dvhtool-1.0.1-r1 253
+RMD160 0b7436139ae11ca3b445c3bc313f592d5d18f608 files/digest-dvhtool-1.0.1-r1 253
+SHA256 106240e0d2664544e2a7ca0799c946c55653cab1750b8bcd4294d71c6cb8bc22 files/digest-dvhtool-1.0.1-r1 253
