@@ -1,1 +1,3 @@
 MD5 4448c01e6a015685af90a79fbea8da4e dvhtool_1.0.1.orig.tar.gz 53283
+RMD160 6e9096ac0dc81c2e1a93b7891ec25e373f3c4b40 dvhtool_1.0.1.orig.tar.gz 53283
+SHA256 3596c74c08ee8f2f19712e8f0ab1f7ff8c483de7bfc2f50d205a186f52896f02 dvhtool_1.0.1.orig.tar.gz 53283
